--- a/config/blockchains.yml
+++ b/config/blockchains.yml
@@ -1,6 +1,6 @@
-- key:               ltc-testnet
-  name:              Litecoin Testnet
-  client:            litecoin                             # API client name.
+- key:               agc-testnet
+  name:              AGROSCOIN Testnet
+  client:            agroscoin                             # API client name.
   server:            http://user:password@127.0.0.1:18332 # Public Litecoin node endpoint.
   height:            1087160                               # Initial block number from which sync will be started.
   min_confirmations: 6                                    # Minimal confirmations needed for withdraw and deposit confirmation.
