--- a/config/currencies.yml
+++ b/config/currencies.yml
@@ -1,7 +1,7 @@
-- id:                     ltc
-  name:                   Litecoin
-  blockchain_key:         ltc-testnet
-  symbol:                 'Ł'
+- id:                     agc
+  name:                   AGROSCOIN
+  blockchain_key:         agc-testnet
+  symbol:                 'A'
   type:                   coin
   precision:              8
   base_factor:            100_000_000
